--- a/_overleaf-draft.qmd
+++ b/_overleaf-draft.qmd
@@ -44,64 +44,60 @@ In addition, we carried out a second analysis with a subset of our sample compos
 # Current discussion
 
 The objective of the present study was to examine whether aphantasics could form mental images but could not access them consciously, or whether they presented a genuine deficit in the generation of mental images. To this end, we built and tested an implicit priming paradigm on aphantasic and control participants. The analysis revealed striking evidence that only the control group showed a congruence effect in the implicit task, both when examining the full group and only VVIQ extremes. In addition, all groups responded quicker for colored stimuli as opposed to uncolored ones, independently of congruence. Although they responded slightly faster in the congruent condition in the explicit task, the groups did not exhibit a significant congruence effect there. These findings suggest that aphantasia may not simply be a lack of metacognition, as no congruence effect diminishing the RTs in the congruent setting has been observed in the implicit task for aphantasics, but that aphantasia is associated with a genuine deficit in mental image generation. In the aphantasic group, the intensive study of Gabors in a preliminary association task did not allow the presentation of the prime during the implicit task to trigger the emergence of a representation of the studied Gabors in the form of a mental image (conscious or not), which would have facilitated the judgment of the orientation of the lines of congruent Gabors, as demonstrated in the control group.
+> Good first paragraph, findings summary
 
-Curiously, the analysis of questionnaire data yielded a significant difference between aphantasics and controls in reported spatial imagery, assessed by the spatial scale of the OSIQ, in stark contrast with previous studies on aphantasia that used this questionnaire and found no between-group differences \citep{dawesCognitiveProfileMultisensory2020, keoghBlindMindNo2018, bainbridgeQuantifyingAphantasiaDrawing2021}. While this difference is hard to interpret on its own, it's worth noting that although significant, the difference in spatial imagery between the groups is much less pronounced than the difference observed on visual imagery scales, and therefore hard to associate with the same phenomenon of reduction in imagery. Large differences also existed within the aphantasic group hinting that this finding could be specifically tied to our sample and, more generally, that there could exist various sub-types in aphantasia characterized by their variable reliance on different forms of mental representations (e.g. spatial, verbal, kinesthetic).
+Curiously, besides the gap in visual imagery, the analysis of questionnaire data also yielded a significant difference between aphantasics and controls in reported spatial imagery - assessed by the spatial scale of the OSIQ - in stark contrast with previous studies on aphantasia that used this questionnaire and found no between-group differences \citep{dawesCognitiveProfileMultisensory2020, keoghBlindMindNo2018, bainbridgeQuantifyingAphantasiaDrawing2021}. While this difference is hard to interpret on its own, it is worth noting that although significant, the difference in spatial imagery between the groups is much less pronounced than the difference observed on visual imagery scales, and therefore hard to associate with the same phenomenon of reduction in imagery. Large differences also existed within the aphantasic group hinting that this finding could be specifically tied to our sample and, more generally, that there could exist various sub-types in aphantasia characterized by their variable reliance on different forms of mental representations (e.g. spatial, verbal, kinesthetic).
+> Interpretation of spatial difference, good
 
-The effects of aphantasia have been acknowledged to be difficult to study, as many tasks that ostensibly require visual imagery might also be solved by alternative non-visual strategies, such as the use of internal or covert verbalization \citep{monzelMemoryDeficitsAphantasics2022}. In an interesting study using an implicit priming task where verbal cues (e.g., “banana”) were presented just before pairs of words (e.g., “banana – tomato”) or pictures (e.g., a picture of a banana and of a tomato), aphantasics were slower than non-aphantasics to select pictures that matched prior verbal cues \citep{monzelImagineYouWill2021}. \cite{petilliDatadrivenComputationalModels2021} demonstrated that verbal cues automatically activate the visual properties of referenced objects, affecting the processing of target words even when visual processing is neither requested nor necessary. Furthermore, \cite{amitAsymmetricalRelationshipVerbal2017} provided evidence at the neuronal level that participants generate visual representations, even when the information is meant to be processed verbally. This evidence is consistent with the embodied cognition view of the emergence of representation. Our results therefore coincide with those of \cite{monzelImagineYouWill2021}, and also suggest that the emergence of representations at an implicit/unconscious level is impaired in aphantasia, arguing for a global absence of generation of mental images rather than a sole metacognitive deficit.
-
-However, one could argue that our tasks could be completed using a verbal or propositional strategy based on the color of the stimuli. For instance, in the association phase, participants may have used the propositional strategy of forming the abstract or semantic representation of an association between color and line orientation of the Gabors (e.g., by internally repeating that "blue patches have vertical lines"). During the tasks, when a prime is presented, participants may have used such a representation, which facilitated their response when the color of the target was congruent with the color of the prime. However, our tasks have the decisive advantage of preventing the use of this type of strategy with a condition in which the targets are not colored. As no semantic representation had been previously associated with uncolored targets, the color-based strategy became ineffective. This type of strategy could even have been detrimental, which could explain higher error percentages among control participants in the uncolored condition than in the colored condition. As such, the persistence of the interaction between group and congruence independently of the color condition suggest that our results could not be explained purely by the reliance on propositional strategies. The absence of significant between-group differences in the explicit task might also reflect the use of such strategies. Aphantasics could have used propositional strategies during the 3s imagery phase of the explicit task to "make up" for their absence of visual imagery with another mental association. This other way of apprehending the task could explain their performance equal to that of controls: in contrast, this type of conscious strategy was not available in the implicit task, where aphantasics did not benefit from the congruent condition.
+*The effects of aphantasia have been acknowledged to be difficult to study, as many tasks that ostensibly require visual imagery might also be solved by alternative non-visual strategies, such as the use of internal or covert verbalization \citep{monzelMemoryDeficitsAphantasics2022}. --> NOT HERE* In an interesting study using an implicit priming task where verbal cues (e.g., “banana”) were presented just before pairs of words (e.g., “banana – tomato”) or pictures (e.g., a picture of a banana and of a tomato), aphantasics were slower than non-aphantasics to select pictures that matched prior verbal cues \citep{monzelImagineYouWill2021}. \cite{petilliDatadrivenComputationalModels2021} demonstrated that verbal cues automatically activate the visual properties of referenced objects, affecting the processing of target words even when visual processing is neither requested nor necessary. Furthermore, \cite{amitAsymmetricalRelationshipVerbal2017} provided evidence at the neuronal level that participants generate visual representations, even when the information is meant to be processed verbally. This evidence is consistent with the embodied cognition view of the emergence of representation. Our results therefore coincide with those of \cite{monzelImagineYouWill2021}, and also suggest that the emergence of representations at an implicit/unconscious level is impaired in aphantasia, arguing for a global absence of generation of mental images rather than a sole metacognitive deficit.
+> Monzel and implicitly talking about embodied cognition
 
 Nevertheless, our results do not imply that no unconscious representation emerges at all in aphantasia, but they do suggest that the emergence of the sensory features of representations is impaired. As discussed by \cite{keoghBlindMindNo2018}, aphantasics may show abnormal levels of activity in visual areas, frontal areas or both, that alter the creation of mental images and their features. Aphantasia may also be due to disconnections within a putative ventral temporal network, consisting of the fusiform imagery node, the anterior temporal lobes, and the medial temporal lobe, which are another hypothesis proposed for the fundamental network responsible for visual imagery \citep{spagnaChapterVisualMental2022, spagnaVisualMentalImagery2021}.
+> Sensory representations might be impaired, little bone to doggy Barto
+
+One could argue that our tasks could be completed using a verbal or propositional strategy based on the color of the stimuli. For instance, in the association phase, participants may have used the propositional strategy of forming the abstract or semantic representation of an association between color and line orientation of the Gabors (e.g., by internally repeating that "blue patches have vertical lines"). During the tasks, when a prime is presented, participants may have used such a representation, which facilitated their response when the color of the target was congruent with the color of the prime. However, our tasks have the decisive advantage of preventing the use of this type of strategy with a condition in which the targets are not colored. As no semantic representation had been previously associated with uncolored targets, the color-based strategy became ineffective. This type of strategy could even have been detrimental, which could explain higher error percentages among control participants in the uncolored condition than in the colored condition. As such, the persistence of the interaction between group and congruence independently of the color condition suggest that our results could not be explained purely by the reliance on propositional strategies. The absence of significant between-group differences in the explicit task might also reflect the use of such strategies. Aphantasics could have used propositional strategies during the 3s imagery phase of the explicit task to "make up" for their absence of visual imagery with another mental association. This other way of apprehending the task could explain their performance equal to that of controls: in contrast, this type of conscious strategy was not available in the implicit task, where aphantasics did not benefit from the congruent condition.
+> Discussion of alternative strategies
 
 It should be noted that is often implied in discussions about aphantasia that fast automatic predictive processing and simulation of sensory representations are overall major functional advantages \citep[see for instance][]{monzelMemoryDeficitsAphantasics2022, blomkvistDefiningDiagnosingAphantasia2023}. Nonetheless, couldn't an absence of strong unconscious priming by internal representations be beneficial? Several recent studies suggest that this "buffer" effect of aphantasia on sensory representations could have positive consequences: \cite{wickenCriticalRoleMental2021} showed that aphantasics exhibited dimmed electrophysiological responses to frightening scenarios; \cite{keoghFewerIntrusiveMemories2023} used a laboratory model of PTSD and noted that aphantasics reported fewer intrusive memories when confronted with traumatic films; \cite{konigsmarkGanzflickerExperienceHigh2021} demonstrated, using a rhythmic flicker paradigm to induce pseudo-hallucinations, that aphantasics experienced less anomalous percepts. Another, much less discussed avenue for research on aphantasia, is that of reasoning: we have brought evidence here suggesting that aphantasics simulate less sensory elements in their unconscious representations. Could this constitute an advantage to shorten the gap towards abstraction for cognitive operations? This potentially detrimental effect of visual imagery on reasoning speed is supported by literature on mental models and reasoning \citep[e.g.,][]{knauffSpatialReasoningNo2001,knauffVisualImageryCan2002, knauffSpaceReasonSpatial2013,johnson-lairdChapterOneUnified2013}.
 Studies at the interface of the fields of mental imagery, embodied cognition and reasoning could provide new answers to these questions, which could in turn shed light on the amazing range of functional properties of the various types of mental representations.
-
-% A question remains about what we call a “genuine deficit in mental imagery”. While having no images in mind at all is quite theoretically conceivable, having no emerging representation at all is not, as aphantasics are still autonomous compared to amnesic patients for instance. Then, it would be more parsimonious to consider that the process that underlie the emergence of representations is somehow altered as well as the emerging representation, which may lack of its visual, and in some cases, other modal components.
+> Positive note at the end on potential positive outcomes of aphantasia
 
 In sum, our findings provided evidence suggesting that aphantasia does not result from lacking metacognition, but from a true absence of unconscious and involuntary mental imagery. The consistency of the congruence effect obtained in our implicit task shows that this priming paradigm is a promising and reliable basis for future behavioral tasks aiming to characterize mental imagery objectively and implicitly, without relying on participant introspection.  
+> Conclusion
 
 ## Structure of the current discussion
 
-# Old discussion
-
-Using implicit and explicit priming paradigms, the objective of the present study was to examine whether aphantasics can form mental images but cannot access them consciously or present a genuine deficit in the generation of mental images. The analysis revealed a complex pattern of results…. that, in the explicit task alone, the percentage of errors  was higher when targets were uncolored than when they were colored only for control participants. The analysis also revealed the striking evidence that only the control group showed a congruence effect in both the explicit and implicit tasks, and that the control group and the aphantasic group responded more slowly in the uncolored condition than in the colored condition. 
-The effects of aphantasia have been acknowledged to be difficult to study, as many tasks that ostensibly require visual imagery can also be solved by alternative non-visual strategies, such as the use of verbalization (Monzel et al., 2022). To our knowledge, effects of aphantasia have often been studied with explicit tasks that ostensibly require visual imagery and have never been studied with an implicit priming task. Furthermore, performance in both type of tasks has never been directedly compared. Our paradigm has the major asset to provide direct comparison of two explicit and implicit priming tasks and contributed to show that aphantasics are impaired in both tasks.
-However, one could argue that our tasks can be completed using a verbal or propositional strategy based on the color of the stimuli. For instance, in the association phase, participants may have used the propositional strategy of forming the abstract or semantic representation of an association between color and line orientation of the Gabors (e.g., by internally repeating that "blue patches have vertical lines"). During the tasks, when a prime is presented, participants may have used such a representation, which facilitated their response when the color of the target was congruent with the color of the prime. However, our tasks have the decisive advantage of preventing the use of this type of strategy with a condition in which the targets are not colored. As no semantic representation has been previously associated with uncolored targets, the color-based strategy become ineffective. This type of strategy could even have been detrimental, explaining higher error percentages among control participants in the uncolored condition than in the colored condition. Thus, performance in the uncolored condition confirms the critical absence of an implicit priming effect and an explicit priming effect in aphantasia.
-These findings suggest that aphantasia may not simply be a lack of metacognition, because otherwise, the congruence effect would not have been observed only in the explicit task for aphantasics, who were explicitly asked to introspect and rely on metacognition. These findings suggests that aphantasia is at least associated with a genuine deficit in mental image generation. In the aphantasic group, the intensive study of Gabors did not allow the presentation of the prime during the implicit task to trigger the emergence of a representation of the studied Gabors in the form of a mental image (conscious or not), which would have facilitated the judgment of the orientation of the lines of congruent Gabors, as demonstrated in the control group.
-
-
-	 
-
-Nevertheless, it doesn't suggest that no representation emerges at all in aphantasia, but it does at least suggest that emergence is impaired, and representation is degraded. As discussed by Keogh & Pearson (2018), aphantasics may show abnormal levels of activity in visual areas, frontal areas or both, that alter the creation of mental images and their features. Aphantasia may also be due to disconnections within a putative ventral temporal network, consisting of the fusiform imagery node, the anterior temporal lobes, and the medial temporal lobe (Spagna, 2022; Spagna et al., 2021).
-
-However, cluster analysis cluster analysis revealed a more complex picture. While Cluster 1, a cluster mostly composed of aphantasics, showed no congruence effect in the uncolored condition in both tasks, consistent with a genuine deficit in mental imagery generation, it showed a negative congruence effect in the colored condition for both tasks, with faster responses for incongruent trials than for congruent trials. One interpretation is that the prime would first activate the response associated with it during the association phase, followed by inhibition to avoid a premature response to the prime. In congruent trials, participants must then reactivate the response that has just been inhibited, which slow down response time. In incongruent trials, on the other hand, the inhibited response is not required, so response time is not slowed down. This pattern is only exhibited in the colored condition as the color of the target is more closely associated with the response made in the association phase (i.e., responding either “red” or “blue” to a presented Gabor). As to why only some aphantasics behave this way, the reason is yet to be fully understood. Due to the atypical profile (or condition) of aphantasics, associations between representations and between brain networks, might have been installed during learning and might be linked to compensating phenomenon, which could have led to such an inhibitory behavior. According to connectionist models, processes can be run in parallel, and associations can be made between representations, due to the overlap between brain networks and the similarity of the processes involved. Such associations can lead to conflict between processes and interference between representations, leading to the involvement of inhibitory processes.
-
-We also observed that Cluster 2, the largest cluster also mostly composed of aphantasics, showed a congruence effect in the explicit task only when the targets were colored. This result seems to speak against a universal and genuine deficit in mental imagery generation. One could argue that some aphantasics are relatively spared or have a selective deficit in the non-conscious emergence of mental images (as evidenced in the implicit task) but would have a preserved ability to consciously access mental images in (as evidenced in the explicit task). However, while we agree with the idea of possible sub-categories of aphantasia within a heterogeneous group (see Dawes et al., 2020, see also Palermo et al., 2022), we argue that representations can emerge from the cognitive system without systematically reaching consciousness in the form of mental images, but that to consciously experience mental images, representations must first emerge. Consequently, a more parsimonious interpretation is that during the association phase, participants in Cluster 2 may have used the strategy of forming the abstract or semantic representation of an association between color and line orientation of the Gabors (e.g., "blue patches have vertical lines"). In the explicit task, they may have maintained such a representation, so the presentation of the prime facilitated their response when the color of the target was congruent with the color of the prime. This strategy did not prove advantageous in the uncolored condition, as the target did not possess the necessary color for the strategy to be effective. Furthermore, this strategy did not prove advantageous in the implicit task, because the short delay between prime and target prevents the strategy from being used effectively. Such an interpretation is not incompatible with a genuine deficit in mental imagery generation in aphantasia.
-
-The cluster analysis also showed that, while Cluster 3 (100% non-aphantasics) only exhibited a congruence effect in the implicit task in the colored condition, Cluster 4 (mostly non-aphantasics) exhibited the exact reversed pattern of results. This may suggest that some non-aphantasic control participants (Cluster 3) lack the metacognitive abilities to access mental imagery (as evidenced by the lack of a congruency effect in the explicit task), while some others (Cluster 4) might have good metacognitive abilities (as evidenced by the congruency effect in the explicit task). However, both seems to have an emergence of representations relatively spared (as evidenced by the congruency effect in the implicit task), but affected differently by specific factors that will selectively be detrimental in either the colored or uncolored condition. However, we do not have enough information to identify these factors more precisely.  It is worth noting that Cluster 3 showed fast reponse times in the implicit task. 
-
-The results of our cluster analysis seems to speak for a continuum in the ability of generating mental images, where aphantasia is at one of the end point of this continuum. Beacause of compensating processes or strategy, aphantasics and non-aphantasics can in some cases express similar performances. Future research need to distangle more precisely the specific mechanisms, processes or strategy that are involved in such cases. 
-
-While the picture seemed simple using a classical statistical approach, cluster analysis contributed to have a more fine-grained and nuanced picture of aphantasia. 
-
-A question remains about what we call a “genuine deficit in mental imagery”. While having no images in mind at all is quite theoritcally concevable, having no emerging representation at all is not, as aphantasics are still autonomous compared to amnesic patients for instance. Then, it would be more parcimonious to consider that the process that underly the emergence of representaions is somehow altered as well as the emerging representation, which may lack of its visual, and in some cases, other modal components.
-
-## Structure of the old discussion
-
 ---
 
-# Ideas - discussion
+# Ideas - Only one paragraph to modify
 
-Argument against Rudy's introduction: in his argument, cross-modal studies seem really powerful. Then why did we do this? We should propose this in the discussion.
+## Embodied cognition from the current intro then related Monzel
 
-Monzel 2021 is a cross-modal experiment in line with what is done in embodied cognition: it should be mentioned after explaining the explanatory potential of this domain.
+<!-- Additional insights of unconscious and involuntary mental imagery come from embodied cognition which suggests that sensorimotor simulation might be a kind of unconscious and involuntary mental imagery  \citep{murakiInsightsEmbodiedCognition2023}. A sensorimotor simulation is the re-creation of the states in which the individual's perceptual and motor systems were in a previous experience, as well as the individual's emotional and introspective states in that experience \citep[e.g.,][]{barsalouGroundedCognition2008, barsalouSimulationSituatedConceptualization2009, dijkstraMechanismsEmbodiment2015, milleSensMemoire2021, versaceContentsLongtermMemory2009, versaceActInIntegratedView2014, versaceCognitionIncarneeCognition2018}. From this re-creation emerges a representation that can reach consciousness in the form of a mental image of, for instance, an apple, if the neurons in the perceptual and motor systems that were activated during our confrontations with apples are reactivated in the present situation. However, it is assumed that these emerging representations do not systematically reach consciousness voluntarily. For instance, 
+
+although reading the word “apple” triggers the emergence of multimodal representations (e.g., of its appearance, taste, smell, sound and grip) without necessarily reaching consciousness, it has been shown in various cross-modal priming studies that these representations can still influence subsequent behavioural responses \citep[e.g.][]{brunelSensoryNatureKnowledge2010, reyMaskWhoWasn2015, reyAutomaticVisualSimulation2017, valletPerceptualNatureCrossModal2010}. As such, these multimodal sensory representations coudl constitute a form of unconscious, involuntary mental images capable of influencing conscious behaviour. -->
+
+
+*New Monzel:* 
+<!-- In an interesting study using an implicit priming task where verbal cues (e.g., “banana”) were presented just before pairs of words (e.g., “banana – tomato”) or pictures (e.g., a picture of a banana and of a tomato), aphantasics were slower than non-aphantasics to select pictures that matched prior verbal cues \citep{monzelImagineYouWill2021}. \cite{petilliDatadrivenComputationalModels2021} demonstrated that verbal cues automatically activate the visual properties of referenced objects, affecting the processing of target words even when visual processing is neither requested nor necessary. Furthermore, \cite{amitAsymmetricalRelationshipVerbal2017} provided evidence at the neuronal level that participants generate visual representations, even when the information is meant to be processed verbally. This evidence is consistent with the embodied cognition view of the emergence of representation. Our results therefore coincide with those of \cite{monzelImagineYouWill2021}, and also suggest that the emergence of representations at an implicit/unconscious level is impaired in aphantasia, arguing for a global absence of generation of mental images rather than a sole metacognitive deficit. -->
+
+<!-- The effects of aphantasia have been acknowledged to be difficult to study, as many tasks that ostensibly require visual imagery might also be solved by alternative non-visual strategies, such as the use of internal or covert verbalization \citep{monzelMemoryDeficitsAphantasics2022}. 
+*A recurrent challenge when studying aphantasia is that many tasks that are often considered to require visual imagery could also be solved by other non-visual strategies, such as the use of internal or covert verbalization \citep{monzelMemoryDeficitsAphantasics2022}. In that vein, it could be argued that our tasks could be completed using a verbal or propositional strategy based on the color of the stimuli.*-->
+
+## Is it really imagery? My paragraph on embodied
 
 *Counter-argument to address in the discussion: did we really assess "imagery", or "mental images" in our study?*
-As we did not instruct participant to produce any mental content in the implicit task, it is questionable whether our study really assessed "mental imagery" as it is commonly defined. This question has to do with the very concept of "unconscious mental images". Should we consider that they exist, those images could neither be produced voluntarily by the participant nor experienced consciously, and are thereforeby definition very hard to objectify. In this way, the mental construct we refer to here as "unconscious mental images" could be compared to the concept of "sensorimotor simulation" developed in the field of embodied cognition, or "predictive processing" in the study of perception. Saying that aphantasics might not have unconscious mental images could then be rephrased as saying that aphantasics do not "simulate" or automatically "predict" the visual (and potentially sensory in general) properties of concepts or incoming information. 
+As we did not instruct participant to produce any specific mental content in the implicit task, we could question whether our study really assessed "mental imagery" as it is commonly defined. This question has to do with the very concept of "unconscious mental images". Should we consider that they exist, those images could neither be produced voluntarily by the participant nor experienced consciously, and are therefore by definition very hard to objectify. To shed some light on this question, the mental construct we refer to here as "unconscious mental images" could be compared to the concept of "sensorimotor simulation" developed in the field of embodied cognition, which has been assumed to be a kind of unconscious mental imagery  \citep{murakiInsightsEmbodiedCognition2023}. A sensorimotor simulation is the re-creation of the states in which the individual's perceptual and motor systems were in a previous experience, as well as the individual's emotional and introspective states in that experience \citep[e.g.,][]{barsalouGroundedCognition2008, barsalouSimulationSituatedConceptualization2009, dijkstraMechanismsEmbodiment2015, milleSensMemoire2021, versaceContentsLongtermMemory2009, versaceActInIntegratedView2014, versaceCognitionIncarneeCognition2018}. From this re-creation emerges a representation that can reach consciousness in the form of a mental image of, for instance, an apple, if the neurons in the perceptual and motor systems that were activated during our confrontations with apples are reactivated in the present situation. However, it is assumed that these emerging representations do not systematically reach consciousness voluntarily. Although reading the word “apple” triggers the emergence of multimodal representations (e.g., of its appearance, taste, smell, sound and grip) without necessarily reaching consciousness, it has been shown in various cross-modal priming studies that these representations can still influence subsequent behavioural responses \citep[e.g.][]{brunelSensoryNatureKnowledge2010, reyMaskWhoWasn2015, reyAutomaticVisualSimulation2017, valletPerceptualNatureCrossModal2010}. As such, these multimodal sensory representations coudl constitute a form of unconscious, involuntary mental images capable of influencing conscious behaviour. In light of this concept, saying that aphantasics might not have unconscious mental images could then be rephrased as saying that aphantasics do not "simulate" the visual (and potentially sensory in general) properties of concepts or incoming information. 
 
-*Self-assessment issue*
-Just like Monzel, a potential criticism is that our groups might be ill defined due to the self-assessment, leading to controls being potential aphantasics and vice-versa due to metacognition failures. However, this phenomenon would actually make our results *more conservative* (as highlighted by Monzel 2021), with the potential classification errors mitigating larger real effect sizes.
+\cite{monzelImagineYouWill2021} has provided early evidence on aphantasia that could be interpreted within this framework. In study using an implicit priming task where verbal cues (e.g., “banana”) were presented before pairs of words (e.g., “banana – tomato”) or pictures (e.g., a picture of a banana and of a tomato), aphantasics were found to be slower than non-aphantasics in selecting pictures that matched prior verbal cues. In this specific situation, \cite{petilliDatadrivenComputationalModels2021} demonstrated that verbal cues automatically activate visual properties of referenced objects and affect subsequent processing of target words, even when visual processing is neither requested nor required. Furthermore, \cite{amitAsymmetricalRelationshipVerbal2017} provided evidence at the neuronal level that participants generate visual representations in such tasks, even when the information is meant to be processed verbally. This evidence is consistent with the embodied cognition view of the emergence of multimodal representations. Accordingly, our results are consistent with those of \cite{monzelImagineYouWill2021} and further suggest that the emergence of sensory representations at an unconscious level is impaired in aphantasia, arguing for a global absence of mental image generation rather than a single metacognitive deficit.
+ 
+# Last intro shit
 
+<!-- Aphantasics differ from the control population on a number of self-report questionnaires of mental imagery and memory \citep{dawesCognitiveProfileMultisensory2020}, such as the Vividness of Visual Imagery Questionnaire \citep[VVIQ;][]{marksVividnessVisualImagery1973}, the Questionnaire upon Mental Imagery (QMI; Sheehan, 1967) \citep[QMI;][]{sheehanShortenedFormBetts1967a}, the Object and Spatial Imagery Questionnaire \citep[OSIQ, but only on the object score;][]{blazhenkovaObjectspatialImageryNew2006}, 
+
+the Episodic Memory Imagery Questionnaire \citep[EMIQ;][]{dawesCognitiveProfileMultisensory2020} or the Survey of Autobiographical Memory \citep[SAM;][]{palomboSurveyAutobiographicalMemory2013}. Although self-reports by aphantasics are very consistent across studies (reduced autobiographical memory, fewer dreams, intact spatial imagery), many authors stress the need to cross subjective reports with more objective tasks assessing visual imagery. -->
+
+Aphantasics often report reduced or absent sensory imagery in various modalities, fewer and less rich dreams \citep{dawesCognitiveProfileMultisensory2020}, reduced episodic and autobiographical memory \citep{dawesCognitiveProfileMultisensory2020}, yet with intact spatial imagery \citep{dawesCognitiveProfileMultisensory2020}.
 ---
 
 
